cluster/apps/networking/traefik/external/promax/promax3/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: promax3
  namespace: external
subsets:
  - addresses:
      - ip: 192.168.102.203
    ports:
      - name: default
        port: 8006
        protocol: TCP
